Create first version of the get_angle degrees function

--- a/Track_analysis.ipynb
+++ b/Track_analysis.ipynb
@@ -4,123 +4,14 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting deepracer-utils\n",
-      "  Downloading deepracer_utils-1.0.1-py3-none-any.whl (50 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m50.8/50.8 kB\u001b[0m \u001b[31m533.8 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hCollecting matplotlib>=3.1.0\n",
-      "  Downloading matplotlib-3.6.2-cp310-cp310-macosx_10_12_x86_64.whl (7.3 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m7.3/7.3 MB\u001b[0m \u001b[31m16.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: joblib>=0.17.0 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from deepracer-utils) (1.2.0)\n",
-      "Requirement already satisfied: scikit-learn>=0.22.0 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from deepracer-utils) (1.1.2)\n",
-      "Requirement already satisfied: python-dateutil<3.0.0,>=2.1 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from deepracer-utils) (2.8.2)\n",
-      "Collecting boto3>=1.12.0\n",
-      "  Downloading boto3-1.26.3-py3-none-any.whl (132 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m132.5/132.5 kB\u001b[0m \u001b[31m4.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: pandas>=1.0.0 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from deepracer-utils) (1.5.0)\n",
-      "Requirement already satisfied: numpy>=1.18.0 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from deepracer-utils) (1.23.3)\n",
-      "Collecting shapely>=1.7.0\n",
-      "  Downloading Shapely-1.8.5.post1-cp310-cp310-macosx_10_9_x86_64.whl (1.2 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.2/1.2 MB\u001b[0m \u001b[31m16.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hCollecting s3transfer<0.7.0,>=0.6.0\n",
-      "  Downloading s3transfer-0.6.0-py3-none-any.whl (79 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m79.6/79.6 kB\u001b[0m \u001b[31m2.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hCollecting jmespath<2.0.0,>=0.7.1\n",
-      "  Downloading jmespath-1.0.1-py3-none-any.whl (20 kB)\n",
-      "Collecting botocore<1.30.0,>=1.29.3\n",
-      "  Downloading botocore-1.29.3-py3-none-any.whl (9.8 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m9.8/9.8 MB\u001b[0m \u001b[31m23.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hCollecting kiwisolver>=1.0.1\n",
-      "  Downloading kiwisolver-1.4.4-cp310-cp310-macosx_10_9_x86_64.whl (65 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m65.5/65.5 kB\u001b[0m \u001b[31m2.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: pyparsing>=2.2.1 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from matplotlib>=3.1.0->deepracer-utils) (3.0.9)\n",
-      "Collecting fonttools>=4.22.0\n",
-      "  Downloading fonttools-4.38.0-py3-none-any.whl (965 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m965.4/965.4 kB\u001b[0m \u001b[31m16.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hCollecting contourpy>=1.0.1\n",
-      "  Downloading contourpy-1.0.6-cp310-cp310-macosx_10_9_x86_64.whl (240 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m240.6/240.6 kB\u001b[0m \u001b[31m7.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: packaging>=20.0 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from matplotlib>=3.1.0->deepracer-utils) (21.3)\n",
-      "Collecting cycler>=0.10\n",
-      "  Downloading cycler-0.11.0-py3-none-any.whl (6.4 kB)\n",
-      "Collecting pillow>=6.2.0\n",
-      "  Downloading Pillow-9.3.0-cp310-cp310-macosx_10_10_x86_64.whl (3.3 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.3/3.3 MB\u001b[0m \u001b[31m19.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: pytz>=2020.1 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from pandas>=1.0.0->deepracer-utils) (2022.2.1)\n",
-      "Requirement already satisfied: six>=1.5 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from python-dateutil<3.0.0,>=2.1->deepracer-utils) (1.16.0)\n",
-      "Requirement already satisfied: scipy>=1.3.2 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from scikit-learn>=0.22.0->deepracer-utils) (1.9.2)\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from scikit-learn>=0.22.0->deepracer-utils) (3.1.0)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.25.4 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from botocore<1.30.0,>=1.29.3->boto3>=1.12.0->deepracer-utils) (1.26.12)\n",
-      "Installing collected packages: shapely, pillow, kiwisolver, jmespath, fonttools, cycler, contourpy, matplotlib, botocore, s3transfer, boto3, deepracer-utils\n",
-      "Successfully installed boto3-1.26.3 botocore-1.29.3 contourpy-1.0.6 cycler-0.11.0 deepracer-utils-1.0.1 fonttools-4.38.0 jmespath-1.0.1 kiwisolver-1.4.4 matplotlib-3.6.2 pillow-9.3.0 s3transfer-0.6.0 shapely-1.8.5.post1\n",
-      "--- Logging error ---\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pip/_internal/utils/logging.py\", line 177, in emit\n",
-      "    self.console.print(renderable, overflow=\"ignore\", crop=False, style=style)\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pip/_vendor/rich/console.py\", line 1673, in print\n",
-      "    extend(render(renderable, render_options))\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pip/_vendor/rich/console.py\", line 1305, in render\n",
-      "    for render_output in iter_render:\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pip/_internal/utils/logging.py\", line 134, in __rich_console__\n",
-      "    for line in lines:\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pip/_vendor/rich/segment.py\", line 249, in split_lines\n",
-      "    for segment in segments:\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pip/_vendor/rich/console.py\", line 1283, in render\n",
-      "    renderable = rich_cast(renderable)\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pip/_vendor/rich/protocol.py\", line 36, in rich_cast\n",
-      "    renderable = cast_method()\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pip/_internal/self_outdated_check.py\", line 130, in __rich__\n",
-      "    pip_cmd = get_best_invocation_for_this_pip()\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pip/_internal/utils/entrypoints.py\", line 58, in get_best_invocation_for_this_pip\n",
-      "    if found_executable and os.path.samefile(\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/genericpath.py\", line 101, in samefile\n",
-      "    s2 = os.stat(f2)\n",
-      "FileNotFoundError: [Errno 2] No such file or directory: '/Library/Frameworks/Python.framework/Versions/3.10/bin/pip'\n",
-      "Call stack:\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/runpy.py\", line 196, in _run_module_as_main\n",
-      "    return _run_code(code, main_globals, None,\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/runpy.py\", line 86, in _run_code\n",
-      "    exec(code, run_globals)\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pip/__main__.py\", line 31, in <module>\n",
-      "    sys.exit(_main())\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pip/_internal/cli/main.py\", line 70, in main\n",
-      "    return command.main(cmd_args)\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pip/_internal/cli/base_command.py\", line 101, in main\n",
-      "    return self._main(args)\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pip/_internal/cli/base_command.py\", line 223, in _main\n",
-      "    self.handle_pip_version_check(options)\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pip/_internal/cli/req_command.py\", line 190, in handle_pip_version_check\n",
-      "    pip_self_version_check(session, options)\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pip/_internal/self_outdated_check.py\", line 236, in pip_self_version_check\n",
-      "    logger.warning(\"[present-rich] %s\", upgrade_prompt)\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/logging/__init__.py\", line 1489, in warning\n",
-      "    self._log(WARNING, msg, args, **kwargs)\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/logging/__init__.py\", line 1624, in _log\n",
-      "    self.handle(record)\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/logging/__init__.py\", line 1634, in handle\n",
-      "    self.callHandlers(record)\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/logging/__init__.py\", line 1696, in callHandlers\n",
-      "    hdlr.handle(record)\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/logging/__init__.py\", line 968, in handle\n",
-      "    self.emit(record)\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pip/_internal/utils/logging.py\", line 179, in emit\n",
-      "    self.handleError(record)\n",
-      "Message: '[present-rich] %s'\n",
-      "Arguments: (UpgradePrompt(old='22.2.1', new='22.3'),)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#!{sys.executable} -m pip install --upgrade deepracer-utils"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +82,7 @@
        " 0.6016199300307823]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -219,13 +110,108 @@
        "(0.6242015289254961, 0.5906041356688785, 0.6089869570222295)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "max(track_widths), min(track_widths), sum(track_widths) / len(track_widths)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Should vbe 90: 315.0\n",
+      "Should vbe 45: 270.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from math import atan2, degrees, radians\n",
+    " \n",
+    "def get_angle_deg(closest_waypoint, the_second_closest_wp, furthest_waypoint):\n",
+    "    \"\"\"Get angle in degrees\"\"\"\n",
+    "    ang = math.degrees(math.atan2(furthest_waypoint[1]-closest_waypoint[1], furthest_waypoint[0]-closest_waypoint[0]) - math.atan2(the_second_closest_wp[1]-closest_waypoint[1], the_second_closest_wp[0]-closest_waypoint[0]))\n",
+    "    return ang + 360 if ang < 0 else ang\n",
+    " \n",
+    "print('Should vbe 90:',get_angle_deg((5, 0), (0, 0), (0, 5)))\n",
+    "print('Should vbe 45:',get_angle_deg((5, 0), (0, 0), (5, 5)))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Get the angles of the track"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The individual angles stats are, right_max: 360.0, left_max: 0.0, mean: 86.1412908622458\n"
+     ]
+    }
+   ],
+   "source": [
+    "angles = []\n",
+    "for i, _ in enumerate(track.center_line):\n",
+    "    is_last_index = i == len(track.center_line) - 1\n",
+    "    is_second_last_index = i == len(track.center_line) - 2\n",
+    "    last_index = i+1\n",
+    "    \n",
+    "    second_point = track.center_line[0]if is_last_index else track.center_line[last_index] \n",
+    "\n",
+    "    third_point = track.center_line[0] if is_second_last_index else \\\n",
+    "        track.center_line[1] \\\n",
+    "            if is_last_index \\\n",
+    "                else track.center_line[i+2]\n",
+    "         \n",
+    "    angles.append(get_angle_deg(track.center_line[i], second_point, third_point))\n",
+    "\n",
+    "print(f'The individual angles stats are, right_max: {max(angles)}, left_max: {min(angles)}, mean: {sum(angles) / len(angles)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The individual angles stats are, max: 3.039774025327458, min: -3.141235144419253, mean: -0.4881785381388011\n"
+     ]
+    }
+   ],
+   "source": [
+    "CORNER_THRESHOLD_ANGLE = 0.5\n",
+    "\n",
+    "corners=[]\n",
+    "current_corner={ 'id': 0 }\n",
+    "\n",
+    "for i, _ in enumerate(track.center_line):\n",
+    "    \n",
+    "    # is_last_index = i == len(track.center_line) -1\n",
+    "    \n",
+    "    second_point = track.center_line[0]if is_last_index else track.center_line[i+1] \n",
+    "    \n",
+    "    angles.append(get_angle_deg(track.center_line[i], second_point))\n",
+    "\n",
+    "print(f'The individual angles stats are, max: {max(angles)}, min: {min(angles)}, mean: {sum(angles) / len(angles)}')"
    ]
   },
   {
