--- a/Track_analysis.ipynb
+++ b/Track_analysis.ipynb
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -130,34 +130,28 @@
      "text": [
       "\n",
       "----- Getting angle in degrees -----\n",
-      "Inputs (0, 0) (5, 0) (-5, 5)\n",
+      "Inputs (0, 0) (0, 5) (-5, 5)\n",
       "dist_cl_to_second term 5.0\n",
-      "dist_cl_to_fur term 7.0710678118654755\n",
+      "dist_cl_to_last term 7.0710678118654755\n",
+      "dist_cl_to_last term 5.0\n",
       "hypotenuse_from_first_to_last 7.0710678118654755\n",
-      "angle_from_first 45.00000000000001\n",
-      "first term 2.356194490192345\n",
-      "second term 0.0\n",
-      "Should be 45: 135.0\n",
+      "For test {'data': ((0, 0), (0, 5), (-5, 5)), 'expected_ang': -45}, expected value -45 and got -45.0\n",
       "\n",
       "----- Getting angle in degrees -----\n",
-      "Inputs (0, 0) (5, 0) (5, 5)\n",
+      "Inputs (0, 0) (0, 5) (-4, 0)\n",
       "dist_cl_to_second term 5.0\n",
-      "dist_cl_to_fur term 7.0710678118654755\n",
-      "hypotenuse_from_first_to_last 7.0710678118654755\n",
-      "angle_from_first 45.00000000000001\n",
-      "first term 0.7853981633974483\n",
-      "second term 0.0\n",
-      "Should be 45: 45.0\n",
+      "dist_cl_to_last term 4.0\n",
+      "dist_cl_to_last term 6.4031242374328485\n",
+      "hypotenuse_from_first_to_last 4.0\n",
+      "For test {'data': ((0, 0), (0, 5), (-4, 0)), 'expected_ang': -90}, expected value -90 and got -90.0\n",
       "\n",
       "----- Getting angle in degrees -----\n",
-      "Inputs (0, 0) (-5, 5) (0, 5)\n",
-      "dist_cl_to_second term 7.0710678118654755\n",
-      "dist_cl_to_fur term 5.0\n",
+      "Inputs (0, 0) (0, 5) (-5, 0)\n",
+      "dist_cl_to_second term 5.0\n",
+      "dist_cl_to_last term 5.0\n",
+      "dist_cl_to_last term 7.0710678118654755\n",
       "hypotenuse_from_first_to_last 5.0\n",
-      "angle_from_first 90.0\n",
-      "first term 1.5707963267948966\n",
-      "second term 2.356194490192345\n",
-      "Should be -45: 315.0\n"
+      "For test {'data': ((0, 0), (0, 5), (-5, 0)), 'expected_ang': -90}, expected value -90 and got -90.0\n"
      ]
     }
    ],
@@ -184,42 +178,60 @@
     "    print('dist_cl_to_second term',dist_cl_to_second)\n",
     "\n",
     "    dist_cl_to_last = math.dist(closest_waypoint, furthest_waypoint)\n",
-    "    print('dist_cl_to_fur term',dist_cl_to_last)\n",
+    "    print('dist_cl_to_last term',dist_cl_to_last)\n",
+    "    \n",
+    "    dist_second_to_last = math.dist(the_second_closest_wp, furthest_waypoint)\n",
+    "    print('dist_cl_to_last term',dist_second_to_last)\n",
     "    \n",
     "    hypotenuse_from_first_to_last = math.sqrt(furthest_waypoint[0]**2 + furthest_waypoint[1]**2)  \n",
     "    print('hypotenuse_from_first_to_last',hypotenuse_from_first_to_last)\n",
     "    assert(hypotenuse_from_first_to_last == dist_cl_to_last)\n",
     "    \n",
-    "    arc_tan_term_one = hypotenuse_from_first_to_last**2 + furthest_waypoint[0]**2 - furthest_waypoint[1]**2\n",
-    "    arc_tan_term_two = 2 * hypotenuse_from_first_to_last * furthest_waypoint[1]\n",
-    "    angle_from_first = math.degrees(math.acos(arc_tan_term_one/ arc_tan_term_two))\n",
-    "    print('angle_from_first', angle_from_first)\n",
+    "    # arc_tan_term_one = hypotenuse_from_first_to_last**2 + furthest_waypoint[0]**2 - furthest_waypoint[1]**2\n",
+    "    # arc_tan_term_two = 2 * hypotenuse_from_first_to_last * furthest_waypoint[1]\n",
+    "    # angle_from_first = math.degrees(math.acos(arc_tan_term_one/ arc_tan_term_two))\n",
+    "    # print('angle_from_first', angle_from_first)\n",
     "\n",
     "    # bearing = math.degrees(math.atan2(dist_cl_to_second, dist_cl_to_last))\n",
     "    # print('Bearing is', bearing)\n",
+    "    # print('furthest_waypoint', furthest_waypoint)\n",
+    "    # print('furthest_waypoint[0]/ furthest_waypoint[1]', furthest_waypoint[0], furthest_waypoint[1])\n",
+    "    # x_div_y = 0 if furthest_waypoint[0] == 0 else furthest_waypoint[1]/ furthest_waypoint[0]\n",
+    "    # x_div_y = dist_second_to_last / dist_cl_to_second\n",
+    "    # x_div_y = furthest_waypoint[1] / closest_waypoint[0]\n",
     "    \n",
-    "    first_term = math.atan2(furthest_waypoint[1]-closest_waypoint[1], furthest_waypoint[0]-closest_waypoint[0])\n",
-    "    print('first term',first_term)\n",
-    "    second_term = math.atan2(the_second_closest_wp[1]-closest_waypoint[1], the_second_closest_wp[0]-closest_waypoint[0])\n",
-    "    print('second term', second_term)\n",
-    "    \n",
-    "    ang = math.degrees(first_term - second_term)\n",
-    "    return ang + 360 if ang < 0 else ang\n",
+    "    # print('x_div_y',x_div_y)\n",
+    "    angle = math.degrees(math.atan2(furthest_waypoint[0], furthest_waypoint[1]))\n",
+    "    return angle\n",
     " \n",
-    "pos_90_1=((0, 0), (-5, 5), (0, 5))\n",
-    "ass_pos_90_1 = get_angle_deg(*pos_90_1)\n",
-    "assert ass_pos_90_1 == 90 \n",
+    "tests = [\n",
+    "            {   \n",
+    "                'data':((0, 0), (0, 5), (-5, 5)),\n",
+    "                'expected_ang': -45\n",
+    "            },   \n",
+    "            {   \n",
+    "                'data':((0, 0), (0, 5), (-4, 0)),\n",
+    "                'expected_ang': -90\n",
+    "            },   \n",
+    "            {   \n",
+    "                'data':((0, 0), (0, 5), (-5, 0)),\n",
+    "                'expected_ang': -90\n",
+    "            }, \n",
+    "         ] \n",
     "\n",
-    "print('Should be 45:', get_angle_deg((0, 0),(5, 0), (-5, 5)))\n",
-    "print('Should be 45:', get_angle_deg((0, 0), (5, 0), (5, 5)))\n",
-    "print('Should be 90:', ass_pos_90_1)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Get the angles of the track"
+    "for test in tests:\n",
+    "    result=get_angle_deg(*test['data'])\n",
+    "    expected_angle = test['expected_ang']\n",
+    "    assert expected_angle == result, f'Result {result} did not match expected value {expected_angle}'\n",
+    "    print(f'For test {test}, expected value {expected_angle} and got {result}')\n",
+    " \n",
+    "# pos_90_1=((0, 0), (-5, 5), (0, 5))\n",
+    "# ass_pos_90_1 = get_angle_deg(*pos_90_1)\n",
+    "# assert ass_pos_90_1 == 90 \n",
+    "\n",
+    "# print('Should be 45:', get_angle_deg((0, 0),(5, 0), (-5, 5)))\n",
+    "# print('Should be 45:', get_angle_deg((0, 0), (5, 0), (5, 5)))\n",
+    "# print('Should be 90:', ass_pos_90_1)\n"
    ]
   },
   {
