--- a/Track_analysis.ipynb
+++ b/Track_analysis.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!{sys.executable} -m pip install --upgrade deepracer-utils"
+    "#!{sys.executable} -m pip install --upgrade deepracer-utils\n"
    ]
   },
   {
@@ -18,7 +18,7 @@
     "from deepracer.tracks import TrackIO, Track, GeometryUtils, TrackPlotter\n",
     "from deepracer.tracks.track_utils import track_breakdown, track_meta\n",
     "import math\n",
-    "import numpy as np"
+    "import numpy as np\n"
    ]
   },
   {
@@ -44,7 +44,7 @@
    "source": [
     "tu = TrackIO()\n",
     "track_name = \"reinvent_base\"\n",
-    "track: Track = tu.load_track(track_name)"
+    "track: Track = tu.load_track(track_name)\n"
    ]
   },
   {
@@ -64,7 +64,7 @@
     }
    ],
    "source": [
-    "TrackPlotter.plot_track(track)"
+    "TrackPlotter.plot_track(track)\n"
    ]
   },
   {
@@ -94,7 +94,8 @@
     "\n",
     "track_widths = []\n",
     "for i, _ in enumerate(track.outer_border):\n",
-    "    track_widths.append(math.dist(track.outer_border[i], track.inner_border[i]))\n",
+    "    track_widths.append(\n",
+    "        math.dist(track.outer_border[i], track.inner_border[i]))\n",
     "\n",
     "track_widths[:5]\n"
    ]
@@ -116,12 +117,12 @@
     }
    ],
    "source": [
-    "max(track_widths), min(track_widths), sum(track_widths) / len(track_widths)"
+    "max(track_widths), min(track_widths), sum(track_widths) / len(track_widths)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -151,13 +152,39 @@
       "dist_cl_to_last term 5.0\n",
       "dist_cl_to_last term 7.0710678118654755\n",
       "hypotenuse_from_first_to_last 5.0\n",
-      "For test {'data': ((0, 0), (0, 5), (-5, 0)), 'expected_ang': -90}, expected value -90 and got -90.0\n"
+      "For test {'data': ((0, 0), (0, 5), (-5, 0)), 'expected_ang': -90}, expected value -90 and got -90.0\n",
+      "\n",
+      "----- Getting angle in degrees -----\n",
+      "Inputs (0, 0) (0, 5) (-5, 0)\n",
+      "dist_cl_to_second term 5.0\n",
+      "dist_cl_to_last term 5.0\n",
+      "dist_cl_to_last term 7.0710678118654755\n",
+      "hypotenuse_from_first_to_last 5.0\n",
+      "For test {'data': ((0, 0), (0, 5), (-5, 0)), 'expected_ang': -90}, expected value -90 and got -90.0\n",
+      "\n",
+      "----- Getting angle in degrees -----\n",
+      "Inputs (-5, 7) (-8, 4) (-5, 4)\n",
+      "dist_cl_to_second term 4.242640687119285\n",
+      "dist_cl_to_last term 3.0\n",
+      "dist_cl_to_last term 3.0\n",
+      "hypotenuse_from_first_to_last 6.4031242374328485\n"
+     ]
+    },
+    {
+     "ename": "AssertionError",
+     "evalue": "Result -51.34019174590991 did not match expected value -45",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [99], line 61\u001b[0m\n\u001b[1;32m     59\u001b[0m     result\u001b[39m=\u001b[39mget_angle_deg(\u001b[39m*\u001b[39mtest[\u001b[39m'\u001b[39m\u001b[39mdata\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[1;32m     60\u001b[0m     expected_angle \u001b[39m=\u001b[39m test[\u001b[39m'\u001b[39m\u001b[39mexpected_ang\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[0;32m---> 61\u001b[0m     \u001b[39massert\u001b[39;00m expected_angle \u001b[39m==\u001b[39m result, \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mResult \u001b[39m\u001b[39m{\u001b[39;00mresult\u001b[39m}\u001b[39;00m\u001b[39m did not match expected value \u001b[39m\u001b[39m{\u001b[39;00mexpected_angle\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\n\u001b[1;32m     62\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mFor test \u001b[39m\u001b[39m{\u001b[39;00mtest\u001b[39m}\u001b[39;00m\u001b[39m, expected value \u001b[39m\u001b[39m{\u001b[39;00mexpected_angle\u001b[39m}\u001b[39;00m\u001b[39m and got \u001b[39m\u001b[39m{\u001b[39;00mresult\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m)\n\u001b[1;32m     64\u001b[0m \u001b[39m# pos_90_1=((0, 0), (-5, 5), (0, 5))\u001b[39;00m\n\u001b[1;32m     65\u001b[0m \u001b[39m# ass_pos_90_1 = get_angle_deg(*pos_90_1)\u001b[39;00m\n\u001b[1;32m     66\u001b[0m \u001b[39m# assert ass_pos_90_1 == 90 \u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     69\u001b[0m \u001b[39m# print('Should be 45:', get_angle_deg((0, 0), (5, 0), (5, 5)))\u001b[39;00m\n\u001b[1;32m     70\u001b[0m \u001b[39m# print('Should be 90:', ass_pos_90_1)\u001b[39;00m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: Result -51.34019174590991 did not match expected value -45"
      ]
     }
    ],
    "source": [
     "from math import atan2, degrees, radians\n",
-    " \n",
+    "\n",
     "# def get_angle_deg(closest_waypoint, the_second_closest_wp, furthest_waypoint):\n",
     "#     \"\"\"Get angle in degrees\"\"\"\n",
     "#     print('Inputs',closest_waypoint, the_second_closest_wp, furthest_waypoint)\n",
@@ -165,69 +192,111 @@
     "#     print('first term',first_term)\n",
     "#     second_term = math.atan2(the_second_closest_wp[1]-closest_waypoint[1], the_second_closest_wp[0]-closest_waypoint[0])\n",
     "#     print('second term', second_term)\n",
-    "    \n",
+    "\n",
     "#     ang = math.degrees(first_term - second_term)\n",
     "#     return ang + 360 if ang < 0 else ang\n",
-    "def get_angle_deg(closest_waypoint, the_second_closest_wp, furthest_waypoint):\n",
-    "    \"\"\"Get angle in degrees\"\"\"\n",
-    "    \n",
-    "    print('\\n----- Getting angle in degrees -----')\n",
-    "    print('Inputs',closest_waypoint, the_second_closest_wp, furthest_waypoint)\n",
-    "    \n",
-    "    dist_cl_to_second = math.dist(closest_waypoint, the_second_closest_wp)\n",
-    "    print('dist_cl_to_second term',dist_cl_to_second)\n",
     "\n",
-    "    dist_cl_to_last = math.dist(closest_waypoint, furthest_waypoint)\n",
-    "    print('dist_cl_to_last term',dist_cl_to_last)\n",
-    "    \n",
-    "    dist_second_to_last = math.dist(the_second_closest_wp, furthest_waypoint)\n",
-    "    print('dist_cl_to_last term',dist_second_to_last)\n",
-    "    \n",
-    "    hypotenuse_from_first_to_last = math.sqrt(furthest_waypoint[0]**2 + furthest_waypoint[1]**2)  \n",
-    "    print('hypotenuse_from_first_to_last',hypotenuse_from_first_to_last)\n",
-    "    assert(hypotenuse_from_first_to_last == dist_cl_to_last)\n",
-    "    \n",
-    "    # arc_tan_term_one = hypotenuse_from_first_to_last**2 + furthest_waypoint[0]**2 - furthest_waypoint[1]**2\n",
-    "    # arc_tan_term_two = 2 * hypotenuse_from_first_to_last * furthest_waypoint[1]\n",
-    "    # angle_from_first = math.degrees(math.acos(arc_tan_term_one/ arc_tan_term_two))\n",
-    "    # print('angle_from_first', angle_from_first)\n",
     "\n",
-    "    # bearing = math.degrees(math.atan2(dist_cl_to_second, dist_cl_to_last))\n",
-    "    # print('Bearing is', bearing)\n",
-    "    # print('furthest_waypoint', furthest_waypoint)\n",
-    "    # print('furthest_waypoint[0]/ furthest_waypoint[1]', furthest_waypoint[0], furthest_waypoint[1])\n",
-    "    # x_div_y = 0 if furthest_waypoint[0] == 0 else furthest_waypoint[1]/ furthest_waypoint[0]\n",
-    "    # x_div_y = dist_second_to_last / dist_cl_to_second\n",
-    "    # x_div_y = furthest_waypoint[1] / closest_waypoint[0]\n",
+    "def put_to_origin(closest_waypoint, the_second_closest_wp, furthest_waypoint) -> tuple:\n",
+    "    \"\"\"Move all the vectors to the origin relative to the closest_waypoint\"\"\"\n",
+    "    new_closest_wp = (0, 0)\n",
+    "    new_second_closest_wp = (\n",
+    "        the_second_closest_wp[0] - closest_waypoint[0], the_second_closest_wp[1] - closest_waypoint[1])\n",
+    "    new_furthest_wp = (\n",
+    "        furthest_waypoint[0] - closest_waypoint[0], furthest_waypoint[1] - closest_waypoint[1])\n",
+    "    return (new_closest_wp,  new_second_closest_wp, new_furthest_wp)\n",
     "    \n",
-    "    # print('x_div_y',x_div_y)\n",
-    "    angle = math.degrees(math.atan2(furthest_waypoint[0], furthest_waypoint[1]))\n",
-    "    return angle\n",
-    " \n",
     "tests = [\n",
-    "            {   \n",
-    "                'data':((0, 0), (0, 5), (-5, 5)),\n",
-    "                'expected_ang': -45\n",
-    "            },   \n",
-    "            {   \n",
-    "                'data':((0, 0), (0, 5), (-4, 0)),\n",
-    "                'expected_ang': -90\n",
-    "            },   \n",
-    "            {   \n",
-    "                'data':((0, 0), (0, 5), (-5, 0)),\n",
-    "                'expected_ang': -90\n",
-    "            }, \n",
-    "         ] \n",
+    "    {\n",
+    "        'data': ((-4, 8), (-4, 4), (-8, 4)),\n",
+    "        'expected_point': ((0, 0), (0, -4), (-4, -4))\n",
+    "    },\n",
+    "\n",
+    "]\n",
     "\n",
     "for test in tests:\n",
-    "    result=get_angle_deg(*test['data'])\n",
+    "    result = put_to_origin(*test['data'])\n",
+    "    \n",
+    "    for i, point in enumerate(result):\n",
+    "        expected_point = test['expected_point'][i]\n",
+    "        calculated_point = result[i]\n",
+    "        assert expected_point == result, f'Result {calculated_point} did not match expected value {expected_point}'\n",
+    "        print(f'For test {test}, expected value {expected_point} and got {calculated_point}')\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "def transform_to_origin(closest_waypoint, the_second_closest_wp, furthest_waypoint) -> dict:\n",
+    "    \"\"\"Align the vectors so that the closest and second closest waypoint are 0 on the x axis\"\"\"\n",
+    "    new_closest_wp = (0, 0)\n",
+    "    new_second_closest_wp = (\n",
+    "        the_second_closest_wp[0] - closest_waypoint[0], the_second_closest_wp[1] - closest_waypoint[1])\n",
+    "    new_furthest_wp = (\n",
+    "        furthest_waypoint[0] - closest_waypoint[0], furthest_waypoint[1] - closest_waypoint[1])\n",
+    "    return {\n",
+    "        'closest_wp': new_closest_wp,\n",
+    "        'second_closest_wp': new_second_closest_wp,\n",
+    "        'furthest_wp': new_furthest_wp,\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "\n",
+    "def get_angle_deg(closest_waypoint, the_second_closest_wp, furthest_waypoint):\n",
+    "    \"\"\"Get angle in degrees\"\"\"\n",
+    "\n",
+    "    print('\\n----- Getting angle in degrees -----')\n",
+    "    print('Inputs', closest_waypoint, the_second_closest_wp, furthest_waypoint)\n",
+    "\n",
+    "    dist_cl_to_second = math.dist(closest_waypoint, the_second_closest_wp)\n",
+    "    print('dist_cl_to_second term', dist_cl_to_second)\n",
+    "\n",
+    "    dist_cl_to_last = math.dist(closest_waypoint, furthest_waypoint)\n",
+    "    print('dist_cl_to_last term', dist_cl_to_last)\n",
+    "\n",
+    "    dist_second_to_last = math.dist(the_second_closest_wp, furthest_waypoint)\n",
+    "    print('dist_cl_to_last term', dist_second_to_last)\n",
+    "\n",
+    "    hypotenuse_from_first_to_last = math.sqrt(\n",
+    "        furthest_waypoint[0]**2 + furthest_waypoint[1]**2)\n",
+    "    print('hypotenuse_from_first_to_last', hypotenuse_from_first_to_last)\n",
+    "    # assert(hypotenuse_from_first_to_last == dist_cl_to_last)\n",
+    "\n",
+    "    angle = math.degrees(math.atan2(\n",
+    "        furthest_waypoint[0], furthest_waypoint[1]))\n",
+    "    return angle\n",
+    "\n",
+    "\n",
+    "tests = [\n",
+    "    {\n",
+    "        'data': ((0, 0), (0, 5), (-5, 5)),\n",
+    "        'expected_ang': -45\n",
+    "    },\n",
+    "    {\n",
+    "        'data': ((0, 0), (0, 5), (-4, 0)),\n",
+    "        'expected_ang': -90\n",
+    "    },\n",
+    "    {\n",
+    "        'data': ((0, 0), (0, 5), (-5, 0)),\n",
+    "        'expected_ang': -90\n",
+    "    },\n",
+    "    {\n",
+    "        'data': ((0, 0), (0, 5), (-5, 0)),\n",
+    "        'expected_ang': -90\n",
+    "    },\n",
+    "    {\n",
+    "        'data': ((-5, 7), (-5, 4), (-8, 4)),\n",
+    "        'expected_ang': -45\n",
+    "    },\n",
+    "]\n",
+    "\n",
+    "for test in tests:\n",
+    "    result = get_angle_deg(*test['data'])\n",
     "    expected_angle = test['expected_ang']\n",
     "    assert expected_angle == result, f'Result {result} did not match expected value {expected_angle}'\n",
     "    print(f'For test {test}, expected value {expected_angle} and got {result}')\n",
-    " \n",
+    "\n",
     "# pos_90_1=((0, 0), (-5, 5), (0, 5))\n",
     "# ass_pos_90_1 = get_angle_deg(*pos_90_1)\n",
-    "# assert ass_pos_90_1 == 90 \n",
+    "# assert ass_pos_90_1 == 90\n",
     "\n",
     "# print('Should be 45:', get_angle_deg((0, 0),(5, 0), (-5, 5)))\n",
     "# print('Should be 45:', get_angle_deg((0, 0), (5, 0), (5, 5)))\n",
@@ -253,17 +322,19 @@
     "    is_last_index = i == len(track.center_line) - 1\n",
     "    is_second_last_index = i == len(track.center_line) - 2\n",
     "    last_index = i+1\n",
-    "    \n",
-    "    second_point = track.center_line[0]if is_last_index else track.center_line[last_index] \n",
+    "\n",
+    "    second_point = track.center_line[0]if is_last_index else track.center_line[last_index]\n",
     "\n",
     "    third_point = track.center_line[0] if is_second_last_index else \\\n",
     "        track.center_line[1] \\\n",
-    "            if is_last_index \\\n",
-    "                else track.center_line[i+2]\n",
-    "         \n",
-    "    angles.append(get_angle_deg(track.center_line[i], second_point, third_point))\n",
+    "        if is_last_index \\\n",
+    "        else track.center_line[i+2]\n",
     "\n",
-    "print(f'The individual angles stats are, right_max: {max(angles)}, left_max: {min(angles)}, mean: {sum(angles) / len(angles)}')"
+    "    angles.append(get_angle_deg(\n",
+    "        track.center_line[i], second_point, third_point))\n",
+    "\n",
+    "print(\n",
+    "    f'The individual angles stats are, right_max: {max(angles)}, left_max: {min(angles)}, mean: {sum(angles) / len(angles)}')\n"
    ]
   },
   {
@@ -282,18 +353,19 @@
    "source": [
     "CORNER_THRESHOLD_ANGLE = 0.5\n",
     "\n",
-    "corners=[]\n",
-    "current_corner={ 'id': 0 }\n",
+    "corners = []\n",
+    "current_corner = {'id': 0}\n",
     "\n",
     "for i, _ in enumerate(track.center_line):\n",
-    "    \n",
+    "\n",
     "    # is_last_index = i == len(track.center_line) -1\n",
-    "    \n",
-    "    second_point = track.center_line[0]if is_last_index else track.center_line[i+1] \n",
-    "    \n",
+    "\n",
+    "    second_point = track.center_line[0]if is_last_index else track.center_line[i+1]\n",
+    "\n",
     "    angles.append(get_angle_deg(track.center_line[i], second_point))\n",
     "\n",
-    "print(f'The individual angles stats are, max: {max(angles)}, min: {min(angles)}, mean: {sum(angles) / len(angles)}')"
+    "print(\n",
+    "    f'The individual angles stats are, max: {max(angles)}, min: {min(angles)}, mean: {sum(angles) / len(angles)}')\n"
    ]
   },
   {
