--- a/Track_analysis.ipynb
+++ b/Track_analysis.ipynb
@@ -122,13 +122,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "For test {'data': ((-4, 8), (-4, 4), (-8, 4)), 'expected_point': ((0, 0), (0, -4), (-4, -4))}, expected value (0, 0) and got (0, 0)\n",
+      "For test {'data': ((-4, 8), (-4, 4), (-8, 4)), 'expected_point': ((0, 0), (0, -4), (-4, -4))}, expected value (0, -4) and got (0, -4)\n",
+      "For test {'data': ((-4, 8), (-4, 4), (-8, 4)), 'expected_point': ((0, 0), (0, -4), (-4, -4))}, expected value (-4, -4) and got (-4, -4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def put_to_origin(closest_waypoint, the_second_closest_wp, furthest_waypoint) -> tuple:\n",
+    "    \"\"\"Move all the vectors to the origin relative to the closest_waypoint\"\"\"\n",
+    "    new_closest_wp = (0, 0)\n",
+    "    new_second_closest_wp = (\n",
+    "        the_second_closest_wp[0] - closest_waypoint[0], the_second_closest_wp[1] - closest_waypoint[1])\n",
+    "    new_furthest_wp = (\n",
+    "        furthest_waypoint[0] - closest_waypoint[0], furthest_waypoint[1] - closest_waypoint[1])\n",
+    "    return (new_closest_wp,  new_second_closest_wp, new_furthest_wp)\n",
+    "    \n",
+    "tests = [\n",
+    "    {\n",
+    "        'data': ((-4, 8), (-4, 4), (-8, 4)),\n",
+    "        'expected_point': ((0, 0), (0, -4), (-4, -4))\n",
+    "    },\n",
+    "]\n",
+    "\n",
+    "for test in tests:\n",
+    "    result = put_to_origin(*test['data'])\n",
+    "    \n",
+    "    for i, point in enumerate(result):\n",
+    "        expected_point = test['expected_point'][i]\n",
+    "        calculated_point = result[i]\n",
+    "        assert expected_point[0] == calculated_point[0] and expected_point[1] == calculated_point[1], f'Result {calculated_point} did not match expected value {expected_point}'\n",
+    "        print(f'For test {test[\"data\"]}, expected value {expected_point} and got {calculated_point}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ab (8, 6) cd (7, 9)\n",
+      "Cosθ = 0.9647638212377322\n",
+      "θ = 15.255118703057764 °\n",
+      "For test ((8, 6), (7, 9)), expected value 15.255118703057764 and got 15.255118703057764\n"
+     ]
+    }
+   ],
+   "source": [
+    "def angle_of_vectors(ab,cd):\n",
+    "    \"\"\"Returns the angle of the vectors\"\"\"\n",
+    "    print('ab',ab,'cd',cd)\n",
+    "    #  dotProduct = a*c + b*d\n",
+    "    dot_product = ab[0]*cd[0] + ab[1]*cd[1]\n",
+    "         # for three dimensional simply add dotProduct = a*c + b*d  + e*f \n",
+    "    mod_of_vector_1 = math.sqrt( ab[0]** 2 + ab[1]** 2)*math.sqrt(cd[0] ** 2 + cd[1] ** 2) \n",
+    "         # for three dimensional simply add modOfVector = math.sqrt( a*a + b*b + e*e)*math.sqrt(c*c + d*d +f*f) \n",
+    "    angle = dot_product/mod_of_vector_1\n",
+    "    print(\"Cosθ =\",angle)\n",
+    "    angle_in_degree = math.degrees(math.acos(angle))\n",
+    "    print(\"θ =\",angle_in_degree,\"°\")\n",
+    "    return angle_in_degree\n",
+    " \n",
+    "tests = [\n",
+    "    {\n",
+    "        'data': ((8,6), (7,9)),\n",
+    "        'expected_angle': 15.255118703057764\n",
+    "    },\n",
+    "    {\n",
+    "        'data': ((8,6), (7,9)),\n",
+    "        'expected_angle': 15.255118703057764\n",
+    "    },\n",
+    "]\n",
+    "\n",
+    "for test in tests:\n",
+    "    result = angle_of_vectors(test['data'][0], test['data'][1])\n",
+    "    expected_angle = test['expected_angle']\n",
+    "    calculated_angle = result\n",
+    "    assert expected_angle == calculated_angle, f'Result {calculated_angle} did not match expected value {expected_angle}'\n",
+    "    print(f'For test {test[\"data\"]}, expected value {expected_angle} and got {calculated_angle}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "Result (0, 0) did not match expected value (0, 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [109], line 29\u001b[0m\n\u001b[1;32m     27\u001b[0m expected_point \u001b[39m=\u001b[39m test[\u001b[39m'\u001b[39m\u001b[39mexpected_point\u001b[39m\u001b[39m'\u001b[39m][i]\n\u001b[1;32m     28\u001b[0m calculated_point \u001b[39m=\u001b[39m result[i]\n\u001b[0;32m---> 29\u001b[0m \u001b[39massert\u001b[39;00m expected_point[\u001b[39m0\u001b[39m] \u001b[39m==\u001b[39m calculated_point[\u001b[39m0\u001b[39m] \u001b[39mand\u001b[39;00m expected_point[\u001b[39m1\u001b[39m] \u001b[39m==\u001b[39m calculated_point[\u001b[39m1\u001b[39m], \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mResult \u001b[39m\u001b[39m{\u001b[39;00mcalculated_point\u001b[39m}\u001b[39;00m\u001b[39m did not match expected value \u001b[39m\u001b[39m{\u001b[39;00mexpected_point\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\n\u001b[1;32m     30\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mFor test \u001b[39m\u001b[39m{\u001b[39;00mtest[\u001b[39m\"\u001b[39m\u001b[39mdata\u001b[39m\u001b[39m\"\u001b[39m]\u001b[39m}\u001b[39;00m\u001b[39m, expected value \u001b[39m\u001b[39m{\u001b[39;00mexpected_point\u001b[39m}\u001b[39;00m\u001b[39m and got \u001b[39m\u001b[39m{\u001b[39;00mcalculated_point\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m)\n",
+      "\u001b[0;31mAssertionError\u001b[0m: Result (0, 0) did not match expected value (0, 4)"
+     ]
+    }
+   ],
+   "source": [
+    "def transform_to_origin(closest_waypoint, the_second_closest_wp, furthest_waypoint) -> tuple:\n",
+    "    \"\"\"Align the vectors so that the closest and second closest waypoint are 0 on the x axis. This depends on the closest waypoint having the coordinates origin at 0,0\"\"\"\n",
+    "    assert(closest_waypoint[0] == 0 and closest_waypoint[1] == 0)\n",
+    "    second_point_origin_dist = math.dist((0,0), the_second_closest_wp)\n",
+    "    print('second_point_origin_dist', second_point_origin_dist)\n",
+    "    second_point_transformed = (0, second_point_origin_dist)\n",
+    "    print('second_point_transformed', second_point_transformed)\n",
+    "    degrees_of_rotation_needed = angle_of_vectors(second_point_transformed, the_second_closest_wp)\n",
+    "    \n",
+    "    new_second_closest_wp = (\n",
+    "        the_second_closest_wp[0] - closest_waypoint[0], the_second_closest_wp[1] - closest_waypoint[1])\n",
+    "    new_furthest_wp = (\n",
+    "        furthest_waypoint[0] - closest_waypoint[0], furthest_waypoint[1] - closest_waypoint[1])\n",
+    "    return ( closest_waypoint, new_second_closest_wp, new_furthest_wp )\n",
+    "\n",
+    "tests = [\n",
+    "    {\n",
+    "        'data': ((0, 0), (0, -4), (-4, -4)),\n",
+    "        'expected_point': ((0, 4), (0, -4), (4, 4))\n",
+    "    },\n",
+    "]\n",
+    "\n",
+    "for test in tests:\n",
+    "    result = put_to_origin(*test['data'])\n",
+    "    \n",
+    "    for i, point in enumerate(result):\n",
+    "        expected_point = test['expected_point'][i]\n",
+    "        calculated_point = result[i]\n",
+    "        assert expected_point[0] == calculated_point[0] and expected_point[1] == calculated_point[1], f'Result {calculated_point} did not match expected value {expected_point}'\n",
+    "        print(f'For test {test[\"data\"]}, expected value {expected_point} and got {calculated_point}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For test {'data': ((-4, 8), (-4, 4), (-8, 4)), 'expected_point': ((0, 0), (0, -4), (-4, -4))}, expected value (0, 0) and got (0, 0)\n",
+      "For test {'data': ((-4, 8), (-4, 4), (-8, 4)), 'expected_point': ((0, 0), (0, -4), (-4, -4))}, expected value (0, -4) and got (0, -4)\n",
+      "For test {'data': ((-4, 8), (-4, 4), (-8, 4)), 'expected_point': ((0, 0), (0, -4), (-4, -4))}, expected value (-4, -4) and got (-4, -4)\n",
       "\n",
       "----- Getting angle in degrees -----\n",
       "Inputs (0, 0) (0, 5) (-5, 5)\n",
@@ -163,81 +308,27 @@
       "For test {'data': ((0, 0), (0, 5), (-5, 0)), 'expected_ang': -90}, expected value -90 and got -90.0\n",
       "\n",
       "----- Getting angle in degrees -----\n",
-      "Inputs (-5, 7) (-8, 4) (-5, 4)\n",
-      "dist_cl_to_second term 4.242640687119285\n",
+      "Inputs (-5, 7) (-5, 4) (-8, 4)\n",
+      "dist_cl_to_second term 3.0\n",
+      "dist_cl_to_last term 4.242640687119285\n",
       "dist_cl_to_last term 3.0\n",
-      "dist_cl_to_last term 3.0\n",
-      "hypotenuse_from_first_to_last 6.4031242374328485\n"
+      "hypotenuse_from_first_to_last 8.94427190999916\n"
      ]
     },
     {
      "ename": "AssertionError",
-     "evalue": "Result -51.34019174590991 did not match expected value -45",
+     "evalue": "Result -63.43494882292201 did not match expected value -45",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [99], line 61\u001b[0m\n\u001b[1;32m     59\u001b[0m     result\u001b[39m=\u001b[39mget_angle_deg(\u001b[39m*\u001b[39mtest[\u001b[39m'\u001b[39m\u001b[39mdata\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[1;32m     60\u001b[0m     expected_angle \u001b[39m=\u001b[39m test[\u001b[39m'\u001b[39m\u001b[39mexpected_ang\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[0;32m---> 61\u001b[0m     \u001b[39massert\u001b[39;00m expected_angle \u001b[39m==\u001b[39m result, \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mResult \u001b[39m\u001b[39m{\u001b[39;00mresult\u001b[39m}\u001b[39;00m\u001b[39m did not match expected value \u001b[39m\u001b[39m{\u001b[39;00mexpected_angle\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\n\u001b[1;32m     62\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mFor test \u001b[39m\u001b[39m{\u001b[39;00mtest\u001b[39m}\u001b[39;00m\u001b[39m, expected value \u001b[39m\u001b[39m{\u001b[39;00mexpected_angle\u001b[39m}\u001b[39;00m\u001b[39m and got \u001b[39m\u001b[39m{\u001b[39;00mresult\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m)\n\u001b[1;32m     64\u001b[0m \u001b[39m# pos_90_1=((0, 0), (-5, 5), (0, 5))\u001b[39;00m\n\u001b[1;32m     65\u001b[0m \u001b[39m# ass_pos_90_1 = get_angle_deg(*pos_90_1)\u001b[39;00m\n\u001b[1;32m     66\u001b[0m \u001b[39m# assert ass_pos_90_1 == 90 \u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     69\u001b[0m \u001b[39m# print('Should be 45:', get_angle_deg((0, 0), (5, 0), (5, 5)))\u001b[39;00m\n\u001b[1;32m     70\u001b[0m \u001b[39m# print('Should be 90:', ass_pos_90_1)\u001b[39;00m\n",
-      "\u001b[0;31mAssertionError\u001b[0m: Result -51.34019174590991 did not match expected value -45"
+      "Cell \u001b[0;32mIn [101], line 109\u001b[0m\n\u001b[1;32m    107\u001b[0m     result \u001b[39m=\u001b[39m get_angle_deg(\u001b[39m*\u001b[39mtest[\u001b[39m'\u001b[39m\u001b[39mdata\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[1;32m    108\u001b[0m     expected_angle \u001b[39m=\u001b[39m test[\u001b[39m'\u001b[39m\u001b[39mexpected_ang\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[0;32m--> 109\u001b[0m     \u001b[39massert\u001b[39;00m expected_angle \u001b[39m==\u001b[39m result, \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mResult \u001b[39m\u001b[39m{\u001b[39;00mresult\u001b[39m}\u001b[39;00m\u001b[39m did not match expected value \u001b[39m\u001b[39m{\u001b[39;00mexpected_angle\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\n\u001b[1;32m    110\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mFor test \u001b[39m\u001b[39m{\u001b[39;00mtest\u001b[39m}\u001b[39;00m\u001b[39m, expected value \u001b[39m\u001b[39m{\u001b[39;00mexpected_angle\u001b[39m}\u001b[39;00m\u001b[39m and got \u001b[39m\u001b[39m{\u001b[39;00mresult\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m)\n\u001b[1;32m    112\u001b[0m \u001b[39m# pos_90_1=((0, 0), (-5, 5), (0, 5))\u001b[39;00m\n\u001b[1;32m    113\u001b[0m \u001b[39m# ass_pos_90_1 = get_angle_deg(*pos_90_1)\u001b[39;00m\n\u001b[1;32m    114\u001b[0m \u001b[39m# assert ass_pos_90_1 == 90\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    117\u001b[0m \u001b[39m# print('Should be 45:', get_angle_deg((0, 0), (5, 0), (5, 5)))\u001b[39;00m\n\u001b[1;32m    118\u001b[0m \u001b[39m# print('Should be 90:', ass_pos_90_1)\u001b[39;00m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: Result -63.43494882292201 did not match expected value -45"
      ]
     }
    ],
    "source": [
     "from math import atan2, degrees, radians\n",
-    "\n",
-    "# def get_angle_deg(closest_waypoint, the_second_closest_wp, furthest_waypoint):\n",
-    "#     \"\"\"Get angle in degrees\"\"\"\n",
-    "#     print('Inputs',closest_waypoint, the_second_closest_wp, furthest_waypoint)\n",
-    "#     first_term = math.atan2(furthest_waypoint[1]-closest_waypoint[1], furthest_waypoint[0]-closest_waypoint[0])\n",
-    "#     print('first term',first_term)\n",
-    "#     second_term = math.atan2(the_second_closest_wp[1]-closest_waypoint[1], the_second_closest_wp[0]-closest_waypoint[0])\n",
-    "#     print('second term', second_term)\n",
-    "\n",
-    "#     ang = math.degrees(first_term - second_term)\n",
-    "#     return ang + 360 if ang < 0 else ang\n",
-    "\n",
-    "\n",
-    "def put_to_origin(closest_waypoint, the_second_closest_wp, furthest_waypoint) -> tuple:\n",
-    "    \"\"\"Move all the vectors to the origin relative to the closest_waypoint\"\"\"\n",
-    "    new_closest_wp = (0, 0)\n",
-    "    new_second_closest_wp = (\n",
-    "        the_second_closest_wp[0] - closest_waypoint[0], the_second_closest_wp[1] - closest_waypoint[1])\n",
-    "    new_furthest_wp = (\n",
-    "        furthest_waypoint[0] - closest_waypoint[0], furthest_waypoint[1] - closest_waypoint[1])\n",
-    "    return (new_closest_wp,  new_second_closest_wp, new_furthest_wp)\n",
-    "    \n",
-    "tests = [\n",
-    "    {\n",
-    "        'data': ((-4, 8), (-4, 4), (-8, 4)),\n",
-    "        'expected_point': ((0, 0), (0, -4), (-4, -4))\n",
-    "    },\n",
-    "\n",
-    "]\n",
-    "\n",
-    "for test in tests:\n",
-    "    result = put_to_origin(*test['data'])\n",
-    "    \n",
-    "    for i, point in enumerate(result):\n",
-    "        expected_point = test['expected_point'][i]\n",
-    "        calculated_point = result[i]\n",
-    "        assert expected_point == result, f'Result {calculated_point} did not match expected value {expected_point}'\n",
-    "        print(f'For test {test}, expected value {expected_point} and got {calculated_point}')\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "def transform_to_origin(closest_waypoint, the_second_closest_wp, furthest_waypoint) -> dict:\n",
-    "    \"\"\"Align the vectors so that the closest and second closest waypoint are 0 on the x axis\"\"\"\n",
-    "    new_closest_wp = (0, 0)\n",
-    "    new_second_closest_wp = (\n",
-    "        the_second_closest_wp[0] - closest_waypoint[0], the_second_closest_wp[1] - closest_waypoint[1])\n",
-    "    new_furthest_wp = (\n",
-    "        furthest_waypoint[0] - closest_waypoint[0], furthest_waypoint[1] - closest_waypoint[1])\n",
-    "    return {\n",
-    "        'closest_wp': new_closest_wp,\n",
-    "        'second_closest_wp': new_second_closest_wp,\n",
-    "        'furthest_wp': new_furthest_wp,\n",
-    "    }\n",
-    "\n",
     "\n",
     "\n",
     "def get_angle_deg(closest_waypoint, the_second_closest_wp, furthest_waypoint):\n",
